@@ -114,4 +114,5 @@ Added by andy:
 	  we should probably allow opening and editing, but flash a message
 	  saying it's read-only, and then when saving, tell the user to
 	  select save-as.
-
+        
+        ^^ Semi/Quasi Fixed! If its Read-Only, a Save As... box appears...
