@@ -1,3 +1,9 @@
+1998-09-02  Alex Roberts  <bse@dial.pipex.com>
+
+	* commands.c: Semi-Fixed the Read-Only file thing... 
+	  A message pops up on the statusbar explaining its Read-Only, then
+	  a SaveAs box pops up! whee!....
+
 1998-08-27  Alex Roberts  <bse@dial.pipex.com>
 
 	* gE_about.c: Fixed gEdit homepage URL...
